--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "express": "^5.1.0",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.8.2"
   }
 }
